--- a/server/build.gradle
+++ b/server/build.gradle
@@ -25,7 +25,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 
 
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	// runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
 	annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
