--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -7,10 +7,10 @@ server:
       rename-on-rotate: 'true'
   spring:
     datasource:
-      url: jdbc:mariadb://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false
-      username: ${DB_USER_NAME}
+      driver-class-name: ${DRIVER_CLASS_NAME}
+      url: jdbc:mariadb://${DB_URL}:${DB_PORT}/${DB_NAME}
+      username: ${DB_USERNAME}
       password: ${DB_PASSWORD}
-      driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     show-sql: true
     hibernate:
