--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,22 +1,27 @@
-server:
-  tomcat:
-    accesslog:
-      prefix: access_log
-      enabled: 'true'
-      suffix: log
-      rename-on-rotate: 'true'
-  spring:
-    datasource:
-      driver-class-name: ${DRIVER_CLASS_NAME}
-      url: jdbc:mariadb://${DB_URL}:${DB_PORT}/${DB_NAME}
-      username: ${DB_USERNAME}
-      password: ${DB_PASSWORD}
+spring:
+  datasource:
+    driver-class-name: ${DRIVER_CLASS_NAME}
+    url: jdbc:mariadb://${DB_URL}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USER_NAME}
+    password: ${DB_PASSWORD}
+
   jpa:
-    show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
+
+  output:
+    ansi:
+      enabled: always
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+
+server:
+  port: 8080
+
 fine_tuned_model_id: ${MODEL_ID}
 client: ${MODEL_CLIENT}
